fix todo margin on mobile

--- a/src/media.css
+++ b/src/media.css
@@ -30,7 +30,7 @@
     color: white;
   }
 
-  #todos {
-    padding: 25px;
+  #todos-container {
+    padding: 15px;
   }
 }
